--- a/webappp-one/pom.xml
+++ b/webappp-one/pom.xml
@@ -41,11 +41,11 @@
             <artifactId>lombok</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>io.github.resilience4j</groupId>
-            <artifactId>resilience4j-spring-boot</artifactId>
-            <version>${resilience4j.version}</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>io.github.resilience4j</groupId>-->
+            <!--<artifactId>resilience4j-spring-boot</artifactId>-->
+            <!--<version>${resilience4j.version}</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>io.github.resilience4j</groupId>
@@ -56,14 +56,14 @@
         <dependency>
             <groupId>io.github.resilience4j</groupId>
             <artifactId>resilience4j-circuitbreaker</artifactId>
-            <version>1.1.0</version>
-        </dependency>
-
-        <dependency>
-            <groupId>io.github.resilience4j</groupId>
-            <artifactId>resilience4j-spring</artifactId>
             <version>${resilience4j.version}</version>
         </dependency>
+
+        <!--<dependency>-->
+            <!--<groupId>io.github.resilience4j</groupId>-->
+            <!--<artifactId>resilience4j-spring</artifactId>-->
+            <!--<version>${resilience4j.version}</version>-->
+        <!--</dependency>-->
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
