--- a/webappp-one/src/main/resources/application.yml
+++ b/webappp-one/src/main/resources/application.yml
@@ -14,7 +14,7 @@ resilience4j.circuitbreaker:
     backendB:
       registerHealthIndicator: true
       slidingWindowSize: 10
-      permittedNumberOfCallsInHalfOpenState: 3`
+      permittedNumberOfCallsInHalfOpenState: 3
       slidingWindowType: TIME_BASED
       minimumNumberOfCalls: 20
       waitDurationInOpenState: 50s
